<resources>
    <string name="app_name">Andruino AR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="has_olvidado_tu_contrase_a">Has olvidado tu contraseña?</string>
    <string name="log_in">LOG IN</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="no_tienes_cuenta">No tienes cuenta?</string>
    <string name="registrate">Regístrate</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="o">O</string>
    <string name="repetir_contrasena">Repetir contraseña</string>
    <string name="inicia_sesion">Inicia Sesión</string>
    <string name="tienes_una_cuenta">Tienes una cuenta?</string>
    <string name="continuar">Continuar</string>
    <string name="registro">REGISTRO</string>
    <string name="recupera_contraseña">Introduce tu correo para recuperar la contraseña</string>
    <string name="mode_camera">CÁMARA</string>
    <string name="mode_controller">CONTROLADOR</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="inicioScan">Inicie el escaneo y conéctese al andruino.</string>
    <string name="tiempo_de_uso">Tiempo de uso</string>
    <string name="total">total</string>
    <string name="sesion_actual">sesion actual</string>
    <string name="distancia_recorrida">Distancia Recorrida</string>
    <string name="ultima_ubicacion">Última ubicación</string>
</resources>